# MODBUS

./: .clang-format  .gitignore  LICENSE  ReadMe.md
.github/workflows/: CI-pipeline.yml  CI_pipeline.yml  clang-format_check.yml  run_cppcheck.yml  run_lizard_lib_check.yml  run_modbus_tests.yml  self_hosted_test_not_ready.yml
doc/: Doxyfile  MODBUS_doc.chm
doc/MODBUS_lib_doc/html/: annotated.html  buf__rw_8c.html  buf__rw_8c__incl.map  buf__rw_8c__incl.md5  buf__rw_8c_a12b07bbd37b141df32b9b137dee81a9e_icgraph.md5  buf__rw_8h.html  buf__rw_8h__dep__incl.map  buf__rw_8h__dep__incl.md5  buf__rw_8h__incl.map  buf__rw_8h__incl.md5  buf__rw_8h_a12b07bbd37b141df32b9b137dee81a9e_icgraph.map  buf__rw_8h_source.html  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_000003_000000.html  dir_000003_000001.html  dir_000003_000002.html  dir_3a6751ce2ddbeb7b1db61e747b4a3774.html  dir_3a6751ce2ddbeb7b1db61e747b4a3774_dep.map  dir_3a6751ce2ddbeb7b1db61e747b4a3774_dep.md5  dir_605052ab83d9d17a050b440837ba46ff.html  dir_605052ab83d9d17a050b440837ba46ff_dep.map  dir_605052ab83d9d17a050b440837ba46ff_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  dir_fdedb0aba14d44ce9d99bc100e026e6a_dep.map  dir_fdedb0aba14d44ce9d99bc100e026e6a_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  (+175 more)
examples/STM32G070RB_MODBUS_MASTER/: CMakeLists.txt  custom_targets.cmake
examples/STM32G070RB_MODBUS_MASTER/Core/Inc/: main.h
examples/STM32G070RB_MODBUS_MASTER/Core/Src/: main.c  modbus_master_data_interface.c  syscalls.c
examples/STM32G070RB_MODBUS_MASTER/Drivers/STM32G0_Drivers/: modbus_driver_config.h  modbus_driver_config_c2.h  modbus_driver_interface.c
examples/STM32G070RB_MODBUS_MASTER/Drivers/STM32G0_Drivers/core_init/: core_init.h
examples/STM32G070RB_MODBUS_MASTER/Drivers/STM32G0_Drivers/usart/: usart.c  usart.h
examples/STM32G070RB_MODBUS_SLAVE/: CMakeLists.txt  custom_targets.cmake
examples/STM32G070RB_MODBUS_SLAVE/Core/Inc/: LED_driver.h  core_init.h  modbus_driver_config.h
examples/STM32G070RB_MODBUS_SLAVE/Core/Src/: LED_driver.c  main.c
examples/STM32G070RB_MODBUS_SLAVE/Drivers/STM32G0_Drivers/usart/: usart.c  usart.h
hw/STM32G070RB_MODBUS_MASTER/: CMakeLists.txt
hw/STM32G070RB_MODBUS_MASTER/Core/Src/: core_init.c
hw/STM32G070RB_MODBUS_SLAVE/: CMakeLists.txt  custom_targets.cmake
reports/Code_Coverage/: modbus_gcov_report.buf_rw.c.53643324a6f1c334ebf7aa819883e1ed.html  modbus_gcov_report.functions.html  modbus_gcov_report.html  modbus_gcov_report.modbus_PDU.c.afd400fa5a1220de3d1c5c0e915dc589.html  modbus_gcov_report.modbus_RTU.c.5d3f09693b933590d8895fba16cb6ccc.html  modbus_gcov_report.modbus_crc.c.9c061970cb5caa6752664bfa6605a5f1.html  modbus_gcov_report.modbus_data.c.22122457a6187a0b6a52e31e054adae0.html
reports/Cyclomatic_Complexity/: Lizard_report.html
src/: ToDo.txt  buf_rw.c  buf_rw.h  modbus_PDU.c  modbus_PDU.h  modbus_RTU.c  modbus_RTU.h  modbus_config.h  modbus_crc.c  modbus_crc.h  modbus_data.c  modbus_data.h  modbus_data_interface.h  modbus_driver_interface.h  modbus_manager.c  modbus_manager.h  modbus_master.c  modbus_master.h  modbus_master_data_interface.h  modbus_public_type.h  modbus_queue.c  modbus_queue.h  modbus_slave.c  modbus_slave.h  modbus_type.h
src/common/: buf_rw.c  buf_rw.h  modbus_PDU.c  modbus_PDU.h  modbus_PDU_common.c  modbus_PDU_common.h  modbus_RTU.c  modbus_RTU.h  modbus_crc.c  modbus_crc.h  modbus_data.c  modbus_data.h  modbus_queue.c  modbus_queue.h  modbus_type.h
src/master_internall/: modbus_master_PDU.c  modbus_master_PDU.h  modbus_master_RTU.c  modbus_master_RTU.h  modbus_master_data_interface.h  modbus_queue.c  modbus_queue.h
src/modbus_master_internall/: modbus_master_PDU.c  modbus_master_PDU.h
src/modbus_slave_internall/: modbus_slave_PDU.c  modbus_slave_PDU.h
src/slave_internall/: modbus_data.c  modbus_slave_PDU.c  modbus_slave_PDU.h  modbus_slave_RTU.c  modbus_slave_RTU.h  modbus_slave_data.c  modbus_slave_data.h
test/automation_scripts/: ReadMe.md  config.yaml  requirements.txt  run_targets.py
test/hw_test/STM32G070RB_MODBUS_MASTER/: CMakeLists.txt
test/hw_test/STM32G070RB_MODBUS_MASTER/Core/Inc/: main.h
test/hw_test/STM32G070RB_MODBUS_SLAVE/: CMakeLists.txt
test/master_integration/: CMakeLists.txt  custom_targets.cmake  master_RTU_init_test.c  master_RTU_init_test_runner.c  master_RTU_test.c  master_RTU_test_runner.c  master_init_test.c  master_integration_test_main.c  master_integration_test_runner.c  mock_master_app_data.c  mock_modbus_driver_interface.c
test/modbus/: CMakeLists copy.txt  CMakeLists.txt  ToDo tests.txt  ToDo.txt  custom_targets.cmake  master_PDU_read_exception_code_test.c  master_PDU_read_exception_code_test_runner.c  master_PDU_read_test.c  master_PDU_read_test_runner.c  master_PDU_req_test.c  master_PDU_req_test_runner.c  master_RTU_init_test.c  master_RTU_init_test_runner.c  master_RTU_req_gen_test.c  master_RTU_req_gen_test_runner.c  master_RTU_test.c  master_RTU_test_runner.c  mock_app_data.c  mock_app_data.h  mock_master_app_data.c  mock_master_app_data.h  mock_master_data_interface.c  mock_master_data_interface.h  mock_master_driver_interface.c  mock_master_driver_interface.h  mock_master_slave_common.h  mock_modbus_data_interface.c  mock_modbus_data_interface.h  mock_modbus_driver_interface.h  mock_slave_app_data.c  mock_slave_app_data.h  mock_slave_driver_interface.c  mock_slave_driver_interface.h  modbus_RTU_test.c  modbus_RTU_test_runner.c  modbus_crc_test.c  modbus_crc_test_runner.c  modbus_data_test.c  modbus_data_test_runner.c  modbus_master_PDU_read_test.c  (+25 more)
test/slave_integration/: CMakeLists.txt  custom_targets.cmake  slave_RTU_init_test.c  slave_RTU_init_test_runner.c  slave_RTU_test.c  slave_RTU_test_runner.c  slave_integration_test_main.c
test/template copy/: CMakeLists.txt
(+10 files in other folders)
